manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "coreangcosmoskubernetes"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "coreangcosmoskubernetes"
    spec:
      containers:
        - name: "coreangcosmoskubernetes"
          image: "coreangcosmosapi.azurecr.io/coreangcosmoskubernetes"
          ports:
          - containerPort: 80
