manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "coreangcosmoscluster-953f"
    labels:
        app: "coreangcosmoscluster-953f"
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "coreangcosmoscluster-953f"
