manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "coreangcosmoscluster-ba9b"
    labels:
        app: "coreangcosmoscluster-ba9b"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "coreangcosmoscluster-ba9b"
