manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "coreangcosmosaks-ef03"
    labels:
        app: "coreangcosmosaks-ef03"
spec:
    type: ClusterIP
    ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: http
    selector:
        app: "coreangcosmosaks-ef03"
